@@ -62,10 +62,7 @@ hoe = Hoe.new(GEM_NAME, VERS) do |p|
   
   # == Optional
   p.changes = p.paragraphs_of("History.txt", 0..1).join("\n\n")
-  p.extra_deps = [ [ 'activesupport', '>= 1.4.4'] ]     # An array of rubygem dependencies [name, version], e.g. [ ['active_support', '>= 1.3.1'] ]
-  
-  #p.spec_extras = {}    # A hash of extra values to set in the gemspec.
-  
+  p.extra_deps = [ [ 'activesupport', '>= 2.2.2'] ]
 end
 
 CHANGES = hoe.paragraphs_of('History.txt', 0..1).join("\\n\\n")
