@@ -57,6 +57,17 @@ module RubiGen
       end
 
       protected
+        def current_migration_number
+          Dir.glob("#{RAILS_ROOT}/#{@migration_directory}/[0-9]*_*.rb").inject(0) do |max, file_path|
+            n = File.basename(file_path).split('_', 2).first.to_i
+            if n > max then n else max end
+          end
+        end
+           
+        def next_migration_number
+          current_migration_number + 1
+        end
+             
         def migration_directory(relative_path)
           directory(@migration_directory = relative_path)
         end
@@ -69,19 +80,12 @@ module RubiGen
           not existing_migrations(file_name).empty?
         end
 
-        def current_migration_number
-          Dir.glob("#{@migration_directory}/[0-9]*.rb").inject(0) do |max, file_path|
-            n = File.basename(file_path).split('_', 2).first.to_i
-            if n > max then n else max end
-          end
-        end
-
-        def next_migration_number
-          current_migration_number + 1
-        end
-
         def next_migration_string(padding = 3)
-          "%.#{padding}d" % next_migration_number
+          if ActiveRecord::Base.timestamped_migrations
+            Time.now.utc.strftime("%Y%m%d%H%M%S")
+          else
+            "%.#{padding}d" % next_migration_number
+          end
         end
 
         def gsub_file(relative_destination, regexp, *args, &block)
