@@ -3,6 +3,7 @@
 * Preparation for integration back into Rails
 * --git/-g option for generated files to be added via git commands
 * after_generate hook for generators (used as rails' templates mechanism)
+* bumped activesupport requirement to 2.2.2
 
 == 1.4.0 2008-12-11
 
